# reelay

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config_example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump-version.yml  test.yml
reelay/: __init__.py  bot.py  channels.py  commons.py  config.py  conversation.py  db.py  definitions.py  delete.py  digest.py  listing.py  logger.py  miniapp.py  onboarding.py  overseerr.py  plex.py  radarr.py  sabnzbd.py  sonarr.py  translations.py  transmission.py  webhooks.py
templates/: miniapp.html
tests/: conftest.py  test_db.py  test_miniapp.py  test_overseerr.py  test_plex.py  test_smoke.py  test_webhooks_digest.py
translations/: reelay.en-us.yml
